--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Scaffolding to enable streamlined scripting of local Frequency chain state for development",
   "scripts": {
     "lint": "tsc --noEmit --pretty && eslint \"**/*.ts\" --fix",
-    "createMsa": "set -a ; source .env ; ts-node -r tsconfig-paths/register src/create-msa-example.ts",
-    "graph-migration-setup": "set -a ; source .env ; ts-node --esm src/graph-migration-setup.ts"
+    "create-msa-example": "set -a ; source .env ; ts-node -r tsconfig-paths/register src/examples/create-msa-example.ts",
+    "graph-migration-setup": "set -a ; source .env ; ts-node -r tsconfig-paths/register src/examples/graph-migration-setup.ts"
   },
   "repository": {
     "type": "git",
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/AmplicaLabs/frequency-scenario-template#readme",
   "dependencies": {
     "@dsnp/frequency-schemas": "^1.0.1",
+    "@dsnp/graph-sdk": "/Users/joecaputo/src/LibertyDSNP/graph-sdk/bridge/node/dsnp-graph-sdk-0.0.2.tgz",
     "@frequency-chain/api-augment": "1.7.0",
     "@polkadot/api": "10.7.3",
     "@polkadot/keyring": "12.2.1",
@@ -29,10 +30,12 @@
     "@types/minimist": "^1.2.2",
     "@types/node": "^20.3.1",
     "minimist": "^1.2.8",
+    "npmlog": "^7.0.1",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "@polkadot/typegen": "10.7.3",
+    "@types/npmlog": "^4.1.4",
     "@typescript-eslint/parser": "^5.59.8",
     "@typescript-eslint/typescript-estree": "5.59.8",
     "eslint": "^8.42.0",
