--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Scaffolding to enable streamlined scripting of local Frequency chain state for development",
   "scripts": {
     "lint": "tsc --noEmit --pretty && eslint \"**/*.ts\" --fix",
-    "createMsa": "set -a ; source .env ; ts-node -r tsconfig-paths/register src/create-msa-example.ts",
-    "graph-migration-setup": "set -a ; source .env ; ts-node --esm src/graph-migration-setup.ts",
+    "run-example": "set -a ; source .env ; ts-node -r tsconfig-paths/register src/examples/${npm_config_example}.ts",
+    "create-msa": "set -a ; source .env ; ts-node -r tsconfig-paths/register src/examples/create-msa.ts",
+    "graph-migration-setup": "set -a ; source .env ; ts-node -r tsconfig-paths/register src/examples/graph-migration-setup.ts",
     "test-capacity": "set -a ; source .env ; ts-node -r tsconfig-paths/register src/test-capacity-example.ts"
   },
   "repository": {
@@ -21,6 +22,7 @@
   "homepage": "https://github.com/AmplicaLabs/frequency-scenario-template#readme",
   "dependencies": {
     "@dsnp/frequency-schemas": "^1.0.1",
+    "@dsnp/graph-sdk": "0.0.6",
     "@frequency-chain/api-augment": "1.7.0",
     "@polkadot/api": "10.7.3",
     "@polkadot/keyring": "12.2.1",
@@ -29,6 +31,7 @@
     "@polkadot/util-crypto": "12.2.1",
     "@types/minimist": "^1.2.2",
     "@types/node": "^20.3.1",
+    "loglevel": "^1.8.1",
     "minimist": "^1.2.8",
     "rxjs": "^7.8.1"
   },
