refactor: Capacity test now uses builder pattern

--- a/package.json
+++ b/package.json
@@ -4,10 +4,7 @@
   "description": "Scaffolding to enable streamlined scripting of local Frequency chain state for development",
   "scripts": {
     "lint": "tsc --noEmit --pretty && eslint \"**/*.ts\" --fix",
-    "run-example": "set -a ; source .env ; ts-node -r tsconfig-paths/register src/examples/${npm_config_example}.ts",
-    "create-msa": "set -a ; source .env ; ts-node -r tsconfig-paths/register src/examples/create-msa.ts",
-    "graph-migration-setup": "set -a ; source .env ; ts-node -r tsconfig-paths/register src/examples/graph-migration-setup.ts",
-    "test-capacity": "set -a ; source .env ; ts-node -r tsconfig-paths/register src/test-capacity-example.ts"
+    "run-example": "set -a ; source .env ; ts-node -r tsconfig-paths/register src/examples/${npm_config_example}.ts"
   },
   "repository": {
     "type": "git",
