--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "homepage": "https://github.com/AmplicaLabs/frequency-scenario-template#readme",
   "dependencies": {
     "@dsnp/frequency-schemas": "^1.0.1",
-    "@dsnp/graph-sdk": "0.0.6",
+    "@dsnp/graph-sdk": "^1.0.1",
     "@frequency-chain/api-augment": "1.7.0",
     "@polkadot/api": "10.7.3",
     "@polkadot/keyring": "12.3.2",
