--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "dependencies": {
     "@dsnp/frequency-schemas": "^1.0.1",
     "@dsnp/graph-sdk": "^1.0.1",
-    "@frequency-chain/api-augment": "1.7.0",
+    "@frequency-chain/api-augment": "^1.9.0",
     "@polkadot/api": "10.7.3",
     "@polkadot/keyring": "12.3.2",
     "@polkadot/types": "10.7.3",
