--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
   "homepage": "https://github.com/AmplicaLabs/frequency-scenario-template#readme",
   "dependencies": {
     "@dsnp/frequency-schemas": "^1.0.1",
-    "@dsnp/graph-sdk": "1.0.1",
-    "@frequency-chain/api-augment": "1.7.0",
-    "@polkadot/api": "10.7.3",
-    "@polkadot/keyring": "12.3.2",
-    "@polkadot/types": "10.7.3",
-    "@polkadot/util": "12.3.2",
-    "@polkadot/util-crypto": "12.3.2",
+    "@dsnp/graph-sdk": "^1.0.1",
+    "@frequency-chain/api-augment": "^1.9.0",
+    "@polkadot/api": "10.11.1",
+    "@polkadot/keyring": "12.6.1",
+    "@polkadot/types": "10.11.1",
+    "@polkadot/util": "12.6.1",
+    "@polkadot/util-crypto": "12.6.1",
     "@types/minimist": "^1.2.2",
     "@types/node": "^20.3.1",
     "loglevel": "^1.8.1",
@@ -33,7 +33,7 @@
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
-    "@polkadot/typegen": "10.7.3",
+    "@polkadot/typegen": "10.11.1",
     "@typescript-eslint/parser": "^5.59.8",
     "@typescript-eslint/typescript-estree": "5.59.8",
     "eslint": "^8.42.0",
