--- a/package.json
+++ b/package.json
@@ -2,7 +2,14 @@
   "name": "frequency-scenario-template",
   "version": "1.0.0",
   "description": "Scaffolding to enable streamlined scripting of local Frequency chain state for development",
+  "type": "module",
+  "main": "dist/index.js",
+  "types": "dist/index.d.js",
+  "files": [
+    "/dist"
+  ],
   "scripts": {
+    "build": "tsc",
     "lint": "tsc --noEmit --pretty && eslint \"**/*.ts\" --fix",
     "run-example": "set -a ; source .env ; ts-node -r tsconfig-paths/register src/examples/${npm_config_example}.ts"
   },
@@ -21,11 +28,11 @@
     "@dsnp/frequency-schemas": "^1.0.3",
     "@dsnp/graph-sdk": "^1.0.1",
     "@frequency-chain/api-augment": "^1.9.0",
-    "@polkadot/api": "10.11.1",
-    "@polkadot/keyring": "12.6.1",
-    "@polkadot/types": "10.11.1",
-    "@polkadot/util": "12.6.1",
-    "@polkadot/util-crypto": "12.6.1",
+    "@polkadot/api": "^10.11.2",
+    "@polkadot/keyring": "^12.6.1",
+    "@polkadot/types": "^10.11.2",
+    "@polkadot/util": "^12.6.1",
+    "@polkadot/util-crypto": "^12.6.1",
     "@types/minimist": "^1.2.5",
     "@types/node": "^20.3.1",
     "loglevel": "^1.8.1",
@@ -33,7 +40,7 @@
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
-    "@polkadot/typegen": "10.11.1",
+    "@polkadot/typegen": "^10.11.2",
     "@typescript-eslint/parser": "^5.59.8",
     "@typescript-eslint/typescript-estree": "5.59.8",
     "eslint": "^8.42.0",
