--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,10 +4,11 @@
     "compilerOptions": {
         "allowSyntheticDefaultImports": true,
         "baseUrl": "./src",
+        "declaration": true,
         "esModuleInterop": true,
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
-        "module": "CommonJS",
+        "module": "ES2022",
         "moduleResolution": "node",
         "noImplicitAny": false,
         "noImplicitThis": false,
@@ -28,11 +29,9 @@
         ]
     },
     "include": [
-        "./**/*.ts"
+        "src/**/*.ts"
     ],
     "exclude": [
-        "node_modules/**",
-        "./dist/**",
-        "/tools/**"
+        "src/examples/**"
     ]
 }
