--- a/package.json
+++ b/package.json
@@ -5,14 +5,13 @@
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.js",
-  "files": [
-    "/dist"
-  ],
+  "files": ["/dist"],
   "scripts": {
     "prepare": "npm run build",
     "build": "tsc",
     "lint": "tsc --noEmit --pretty && eslint \"**/*.ts\" --fix",
-    "run-example": "set -a ; source .env ; ts-node --esm -r tsconfig-paths/register src/examples/${npm_config_example}.ts"
+    "lint:fix": "eslint \"**/*.ts\" --fix",
+    "run-example": "set -a ; source .env ; tsx -r tsconfig-paths/register src/examples/${npm_config_example}.ts"
   },
   "repository": {
     "type": "git",
@@ -20,44 +19,42 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/AmplicaLabs/frequency-scenario-template/issues"
   },
   "homepage": "https://github.com/AmplicaLabs/frequency-scenario-template#readme",
   "dependencies": {
-    "@dsnp/frequency-schemas": "^1.0.3",
+    "@dsnp/frequency-schemas": "^1.1.0",
     "@dsnp/graph-sdk": "^1.0.3",
-    "@frequency-chain/api-augment": "^1.9.0",
-    "@polkadot/api": "^10.11.2",
-    "@polkadot/keyring": "^12.6.1",
-    "@polkadot/types": "^10.11.2",
-    "@polkadot/util": "^12.6.1",
-    "@polkadot/util-crypto": "^12.6.1",
+    "@frequency-chain/api-augment": "^1.11.1",
+    "@polkadot/api": "^10.12.4",
+    "@polkadot/keyring": "^12.6.2",
+    "@polkadot/types": "^10.12.4",
+    "@polkadot/util": "^12.6.2",
+    "@polkadot/util-crypto": "^12.6.2",
     "@types/minimist": "^1.2.5",
-    "@types/node": "^20.3.1",
-    "loglevel": "^1.8.1",
+    "@types/node": "^20.12.2",
+    "loglevel": "^1.9.1",
     "minimist": "^1.2.8",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
-    "@polkadot/typegen": "^10.11.2",
-    "@typescript-eslint/parser": "^5.59.8",
-    "@typescript-eslint/typescript-estree": "5.59.8",
-    "eslint": "^8.42.0",
+    "@polkadot/typegen": "^10.12.4",
+    "@typescript-eslint/parser": "^7.4.0",
+    "@typescript-eslint/typescript-estree": "7.4.0",
+    "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-import-resolver-typescript": "^3.5.5",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-n": "^15.7.0",
+    "eslint-config-airbnb-typescript": "^18.0.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-nestjs": "^1.2.3",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-promise": "^6.1.1",
-    "ts-node": "^10.9.2",
-    "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
     "tsx": "^4.7.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.4.3"
   }
 }
