Update the package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frequency-scenario-template",
+  "name": "@amplica-labs/frequency-scenario-template",
   "version": "1.0.0",
   "description": "Scaffolding to enable streamlined scripting of local Frequency chain state for development",
   "type": "module",
