--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -3,7 +3,7 @@ name: Merge to Main
 
 on:
   push:
-    branches: ['main', 'chore/publish-npm']
+    branches: ['main']
 jobs:
   publish-npm-rc:
     name: Publish NPM Release Candidate
