--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "frequency-scenario-template",
-  "version": "1.0.0",
+  "name": "@amplica-labs/frequency-scenario-template",
+  "version": "0.0.0",
   "description": "Scaffolding to enable streamlined scripting of local Frequency chain state for development",
   "type": "module",
   "main": "dist/index.js",
@@ -8,9 +8,10 @@
   "files": ["/dist"],
   "scripts": {
     "prepare": "npm run build",
-    "build": "tsc",
+    "build": "tsc && node scripts/package.cjs",
     "lint": "tsc --noEmit --pretty && eslint \"**/*.ts\" --fix",
     "lint:fix": "eslint \"**/*.ts\" --fix",
+    "pack": "cd dist && npm pack",
     "run-example": "set -a ; source .env ; tsx -r tsconfig-paths/register src/examples/${npm_config_example}.ts"
   },
   "repository": {
