--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "eslint-plugin-promise": "^6.1.1",
     "tsconfig-paths": "^4.2.0",
     "tsx": "^4.7.1",
-    "typescript": "^5.4.3"
+    "typescript": "^5.4.3",
+    "unique-names-generator": "^4.7.1"
   }
 }
