--- a/package.json
+++ b/package.json
@@ -29,22 +29,24 @@
   "homepage": "https://github.com/AmplicaLabs/frequency-scenario-template#readme",
   "dependencies": {
     "@dsnp/frequency-schemas": "^1.1.0",
-    "@dsnp/graph-sdk": "^1.1.1",
-    "@frequency-chain/api-augment": "^1.11.1",
-    "@polkadot/api": "^10.12.4",
+    "@dsnp/graph-sdk": "^1.1.3",
+    "@frequency-chain/api-augment": "^1.12.0",
+    "@polkadot/api": "^11.2.1",
     "@polkadot/keyring": "^12.6.2",
-    "@polkadot/types": "^10.12.4",
+    "@polkadot/types": "^11.2.1",
+    "@polkadot/types-codec": "^11.2.1",
     "@polkadot/util": "^12.6.2",
     "@polkadot/util-crypto": "^12.6.2",
     "@types/minimist": "^1.2.5",
-    "@types/node": "^20.12.2",
+    "@types/node": "^20.14.2",
+    "avsc": "^5.7.7",
     "loglevel": "^1.9.1",
     "minimist": "^1.2.8",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
-    "@polkadot/typegen": "^10.12.4",
-    "@typescript-eslint/parser": "^7.4.0",
+    "@polkadot/typegen": "^11.2.1",
+    "@typescript-eslint/parser": "^7.12.0",
     "@typescript-eslint/typescript-estree": "7.4.0",
     "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
@@ -55,9 +57,10 @@
     "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-nestjs": "^1.2.3",
     "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-promise": "^6.2.0",
     "tsconfig-paths": "^4.2.0",
-    "tsx": "^4.7.1",
-    "typescript": "^5.4.3"
+    "tsx": "^4.12.0",
+    "typescript": "^5.4.5",
+    "unique-names-generator": "^4.7.1"
   }
 }
