--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,37 +1,8 @@
 {
-  "$schema": "https://json.schemastore.org/tsconfig",
-  "display": "Base",
+  "extends": "./tsconfig-base.json",
   "compilerOptions": {
-    "allowSyntheticDefaultImports": true,
-    "baseUrl": "./src",
-    "declaration": true,
-    "esModuleInterop": true,
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
     "module": "ES2022",
-    "moduleResolution": "node",
-    "noImplicitAny": false,
-    "noImplicitThis": false,
-    "outDir": "dist",
-    "paths": {
-      "#app/*": [
-        "*"
-      ]
-    },
-    "resolveJsonModule": true,
-    "sourceMap": true,
-    "strict": true,
-    "skipLibCheck": true,
-    "strictPropertyInitialization": false,
-    "target": "es2022",
-    "typeRoots": [
-      "node_modules/@types"
-    ]
-  },
-  "include": [
-    "src/**/*.ts"
-  ],
-  "exclude": [
-    "src/examples/**"
-  ]
+    "outDir": "dist/mjs",
+    "target": "ES2022"
+  }
 }
