--- a/package.json
+++ b/package.json
@@ -2,15 +2,21 @@
   "name": "@amplica-labs/frequency-scenario-template",
   "version": "0.0.0",
   "description": "Scaffolding to enable streamlined scripting of local Frequency chain state for development",
-  "type": "module",
-  "main": "dist/index.js",
+  "main": "dist/cjs/index.js",
+  "module": "dist/mjs/index.js",
+  "exports": {
+    ".": {
+      "import": "./dist/mjs/index.js",
+      "require": "./dist/cjs/index.js"
+    }
+  },
   "types": "dist/index.d.js",
   "files": [
     "/dist"
   ],
   "scripts": {
     "prepare": "npm run build",
-    "build": "tsc && node scripts/package.cjs",
+    "build": "rm -fr dist/* && tsc -p tsconfig.json && tsc -p tsconfig-cjs.json && node scripts/package.cjs",
     "lint": "tsc --noEmit --pretty && eslint \"**/*.ts\" --fix",
     "lint:fix": "eslint \"**/*.ts\" --fix",
     "pack": "cd dist && npm pack",
@@ -30,11 +36,11 @@
   "dependencies": {
     "@dsnp/frequency-schemas": "^1.1.0",
     "@dsnp/graph-sdk": "^1.1.3",
-    "@frequency-chain/api-augment": "^1.12.0",
-    "@polkadot/api": "^11.2.1",
+    "@frequency-chain/api-augment": "~1.11.1",
+    "@polkadot/api": "^10.13.1",
     "@polkadot/keyring": "^12.6.2",
-    "@polkadot/types": "^11.2.1",
-    "@polkadot/types-codec": "^11.2.1",
+    "@polkadot/types": "^10.13.1",
+    "@polkadot/types-codec": "^10.13.1",
     "@polkadot/util": "^12.6.2",
     "@polkadot/util-crypto": "^12.6.2",
     "@types/minimist": "^1.2.5",
@@ -46,7 +52,7 @@
     "unique-names-generator": "^4.7.1"
   },
   "devDependencies": {
-    "@polkadot/typegen": "^11.2.1",
+    "@polkadot/typegen": "^10.13.1",
     "@typescript-eslint/parser": "^7.12.0",
     "@typescript-eslint/typescript-estree": "7.4.0",
     "eslint": "^8.57.0",
