--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   "dependencies": {
     "@dsnp/frequency-schemas": "^1.1.0",
     "@dsnp/graph-sdk": "^1.1.3",
-    "@frequency-chain/api-augment": "0.0.0-c5b172",
+    "@frequency-chain/api-augment": "1.13.1",
     "@polkadot/api": "^13.0.1",
     "@polkadot/keyring": "^13.1.1",
     "@polkadot/types": "^13.0.1",
