--- a/package.json
+++ b/package.json
@@ -36,13 +36,13 @@
   "dependencies": {
     "@dsnp/frequency-schemas": "^1.1.0",
     "@dsnp/graph-sdk": "^1.1.3",
-    "@frequency-chain/api-augment": "~1.11.1",
-    "@polkadot/api": "^10.13.1",
-    "@polkadot/keyring": "^12.6.2",
-    "@polkadot/types": "^10.13.1",
-    "@polkadot/types-codec": "^10.13.1",
-    "@polkadot/util": "^12.6.2",
-    "@polkadot/util-crypto": "^12.6.2",
+    "@frequency-chain/api-augment": "1.13.1",
+    "@polkadot/api": "^13.0.1",
+    "@polkadot/keyring": "^13.1.1",
+    "@polkadot/types": "^13.0.1",
+    "@polkadot/types-codec": "^13.0.1",
+    "@polkadot/util": "^13.1.1",
+    "@polkadot/util-crypto": "^13.1.1",
     "@types/minimist": "^1.2.5",
     "@types/node": "^20.14.2",
     "avsc": "^5.7.7",
@@ -52,7 +52,7 @@
     "unique-names-generator": "^4.7.1"
   },
   "devDependencies": {
-    "@polkadot/typegen": "^10.13.1",
+    "@polkadot/typegen": "^13.0.1",
     "@typescript-eslint/parser": "^7.12.0",
     "@typescript-eslint/typescript-estree": "7.4.0",
     "eslint": "^8.57.0",
