--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
   "scripts": {
     "prepare": "npm run build",
     "build": "rm -fr dist/* && tsc -p tsconfig.json && tsc -p tsconfig-cjs.json && node scripts/package.cjs",
-    "lint": "tsc --noEmit --pretty && eslint \"**/*.ts\" --fix",
-    "lint:fix": "eslint \"**/*.ts\" --fix",
+    "lint": "tsc --noEmit --pretty && npx eslint src ",
+    "lint:fix": "npx eslint --fix  src",
+    "lint:ci": "npx eslint src && npx prettier --check src",
+    "format": "tsc -p ./tsconfig.eslint.json --noEmit --pretty && npm run prettier && npm run lint:fix",
+    "prettier": "npx prettier --write src",
     "pack": "cd dist && npm pack",
     "run-example": "set -a ; source .env ; tsx -r tsconfig-paths/register src/examples/${npm_config_example}.ts"
   },
@@ -34,39 +37,32 @@
   },
   "homepage": "https://github.com/ProjectLibertyLabs/frequency-scenario-template#readme",
   "dependencies": {
+    "@frequency-chain/api-augment": "^1.15.0",
+    "@polkadot/api": "^14.2.2",
+    "@polkadot/keyring": "^13.2.2",
+    "@polkadot/types": "^14.2.2",
+    "@polkadot/types-codec": "^14.2.2",
+    "@polkadot/util": "^13.2.2",
+    "@polkadot/util-crypto": "^13.2.2",
     "@projectlibertylabs/graph-sdk": "^2.0.1",
-    "@frequency-chain/api-augment": "1.13.2",
-    "@polkadot/api": "^13.2.1",
-    "@polkadot/keyring": "^13.1.1",
-    "@polkadot/types": "^13.2.1",
-    "@polkadot/types-codec": "^13.2.1",
-    "@polkadot/util": "^13.1.1",
-    "@polkadot/util-crypto": "^13.1.1",
     "@types/minimist": "^1.2.5",
-    "@types/node": "^22.7.4",
+    "@types/node": "^22.9.0",
     "avsc": "^5.7.7",
-    "loglevel": "^1.9.1",
+    "loglevel": "^1.9.2",
     "minimist": "^1.2.8",
     "rxjs": "^7.8.1",
     "unique-names-generator": "^4.7.1"
   },
   "devDependencies": {
     "@dsnp/schemas": "^1.3.2",
-    "@polkadot/typegen": "^13.2.1",
-    "@typescript-eslint/parser": "^7.12.0",
-    "@typescript-eslint/typescript-estree": "7.4.0",
-    "eslint": "^8.57.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-airbnb-typescript": "^18.0.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-n": "^16.6.2",
-    "eslint-plugin-nestjs": "^1.2.3",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-promise": "^6.2.0",
+    "@polkadot/typegen": "^14.2.2",
+    "@typescript-eslint/parser": "^8.13.0",
+    "@typescript-eslint/typescript-estree": "8.13.0",
+    "eslint": "^9.14.0",
+    "prettier": "^3.3.3",
     "tsconfig-paths": "^4.2.0",
-    "tsx": "^4.12.0",
-    "typescript": "^5.4.5"
+    "tsx": "^4.19.2",
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.13.0"
   }
 }
