--- a/src/examples/frequency-access/signup-response.json.example
+++ b/src/examples/frequency-access/signup-response.json.example
@@ -21,13 +21,7 @@
   },
   "addProviderPayload": {
     "authorizedMsaId": 1,
-    "schemaIds": [
-      5,
-      7,
-      8,
-      9,
-      10
-    ],
+    "schemaIds": [5, 7, 8, 9, 10],
     "expiration": 11
   },
   "handle": {
