--- a/package.json
+++ b/package.json
@@ -37,13 +37,13 @@
   },
   "homepage": "https://github.com/ProjectLibertyLabs/frequency-scenario-template#readme",
   "dependencies": {
-    "@frequency-chain/api-augment": "^1.17.0",
-    "@polkadot/api": "^16.3.1",
-    "@polkadot/keyring": "^13.5.3",
-    "@polkadot/types": "^16.3.1",
-    "@polkadot/types-codec": "^16.3.1",
-    "@polkadot/util": "^13.5.3",
-    "@polkadot/util-crypto": "^13.5.3",
+    "@frequency-chain/api-augment": "1.17.5",
+    "@polkadot/api": "16.4.3",
+    "@polkadot/keyring": "13.5.4",
+    "@polkadot/types": "16.4.3",
+    "@polkadot/types-codec": "16.4.3",
+    "@polkadot/util": "13.5.4",
+    "@polkadot/util-crypto": "13.5.4",
     "@projectlibertylabs/graph-sdk": "^2.0.1",
     "@types/minimist": "^1.2.5",
     "@types/node": "^24.0.10",
@@ -55,7 +55,7 @@
   },
   "devDependencies": {
     "@dsnp/schemas": "^1.3.2",
-    "@polkadot/typegen": "^16.3.1",
+    "@polkadot/typegen": "16.4.3",
     "@typescript-eslint/parser": "^8.35.1",
     "@typescript-eslint/typescript-estree": "8.35.1",
     "eslint": "^9.30.1",
