--- a/package.json
+++ b/package.json
@@ -37,32 +37,32 @@
   },
   "homepage": "https://github.com/ProjectLibertyLabs/frequency-scenario-template#readme",
   "dependencies": {
-    "@frequency-chain/api-augment": "1.17.5",
-    "@polkadot/api": "16.4.3",
-    "@polkadot/keyring": "13.5.4",
-    "@polkadot/types": "16.4.3",
-    "@polkadot/types-codec": "16.4.3",
-    "@polkadot/util": "13.5.4",
-    "@polkadot/util-crypto": "13.5.4",
+    "@frequency-chain/api-augment": "1.17.6-rc1",
+    "@polkadot/api": "16.4.8",
+    "@polkadot/keyring": "13.5.7",
+    "@polkadot/types": "16.4.8",
+    "@polkadot/types-codec": "16.4.8",
+    "@polkadot/util": "13.5.7",
+    "@polkadot/util-crypto": "13.5.7",
     "@projectlibertylabs/graph-sdk": "^2.0.1",
     "@types/minimist": "^1.2.5",
-    "@types/node": "^24.0.10",
-    "avsc": "^5.7.7",
+    "@types/node": "^24.7.2",
+    "avsc": "^5.7.9",
     "loglevel": "^1.9.2",
     "minimist": "^1.2.8",
     "rxjs": "^7.8.2",
     "unique-names-generator": "^4.7.1"
   },
   "devDependencies": {
-    "@dsnp/schemas": "^1.3.2",
-    "@polkadot/typegen": "16.4.3",
-    "@typescript-eslint/parser": "^8.35.1",
-    "@typescript-eslint/typescript-estree": "8.35.1",
-    "eslint": "^9.30.1",
+    "@dsnp/schemas": "^1.3.3",
+    "@polkadot/typegen": "16.4.8",
+    "@typescript-eslint/parser": "^8.46.1",
+    "@typescript-eslint/typescript-estree": "8.46.1",
+    "eslint": "^9.37.0",
     "prettier": "^3.6.2",
     "tsconfig-paths": "^4.2.0",
-    "tsx": "^4.20.3",
-    "typescript": "^5.8.3",
-    "typescript-eslint": "^8.35.1"
+    "tsx": "^4.20.6",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.46.1"
   }
 }
