--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   },
   "homepage": "https://github.com/ProjectLibertyLabs/frequency-scenario-template#readme",
   "dependencies": {
-    "@frequency-chain/api-augment": "1.17.6-rc1",
+    "@frequency-chain/api-augment": "1.17.6",
     "@polkadot/api": "16.4.8",
     "@polkadot/keyring": "13.5.7",
     "@polkadot/types": "16.4.8",
