--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -5,6 +5,12 @@ on:
   push:
     branches: ['main']
 jobs:
+  test:
+    name: 'E2E Test'
+    runs-on: ubuntu-latest
+    steps:
+      - name: e2e-test
+        uses: ./.github/common/e2e-test
   publish-npm-rc:
     name: Publish NPM Release Candidate
     runs-on: ubuntu-latest
