--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -59,20 +59,5 @@ jobs:
     name: 'E2E Test'
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Install Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ matrix.node-version }}
-
-      - name: Install dependencies
-        run: npm i
-
-      - name: Start frequency
-        run: npm run chain:start
-
-      - name: Run example ${{ matrix.example }}
-        run:  npm run test:ci
-
+      - name: e2e-test
+        uses: ./.github/common/e2e-test
