--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -60,4 +60,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: e2e-test
-        uses: ./.github/common/e2e-test
+        uses: ./.github/workflows/common/e2e-test
