--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -59,5 +59,16 @@ jobs:
     name: 'E2E Test'
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Install Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node-version }}
+
+      - name: Install dependencies
+        run: npm i
+
       - name: e2e-test
         uses: ./.github/workflows/common/e2e-test
