--- a/package.json
+++ b/package.json
@@ -57,15 +57,15 @@
     "unique-names-generator": "^4.7.1"
   },
   "devDependencies": {
-    "@dsnp/schemas": "^1.3.3",
+    "@dsnp/schemas": "1.3.3",
     "@polkadot/typegen": "16.4.8",
-    "@typescript-eslint/parser": "^8.46.1",
+    "@typescript-eslint/parser": "8.49.0",
     "@typescript-eslint/typescript-estree": "8.46.1",
-    "eslint": "^9.37.0",
-    "prettier": "^3.6.2",
-    "tsconfig-paths": "^4.2.0",
-    "tsx": "^4.20.6",
-    "typescript": "^5.9.3",
-    "typescript-eslint": "^8.46.1"
+    "eslint": "9.39.1",
+    "prettier": "3.7.4",
+    "tsconfig-paths": "4.2.0",
+    "tsx": "4.21.0",
+    "typescript": "5.9.3",
+    "typescript-eslint": "8.49.0"
   }
 }
