--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -4,6 +4,10 @@ name: Merge to Main
 on:
   push:
     branches: ['main']
+
+permissions:
+  contents: read
+
 jobs:
   test:
     name: 'E2E Test'
@@ -18,7 +22,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
 
       - name: Install dependencies
-        run: npm i
+        run: npm ci
 
       - name: e2e-test
         uses: ./.github/workflows/common/e2e-test
@@ -33,10 +37,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Install Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v4
+      - name: Setup Node and npm
+        uses: ./.github/workflows/common/setup-node-and-npm
         with:
-          node-version: ${{ matrix.node-version }}
+          cache-dependency-path: package-lock.json
 
       - name: Install dependencies
         run: npm i
