--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -7,32 +7,12 @@ on:
 
 permissions:
   contents: read
+  id-token: write  # Required for OIDC
 
 jobs:
   test:
     name: 'E2E Test'
     runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Install Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ matrix.node-version }}
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: e2e-test
-        uses: ./.github/workflows/common/e2e-test
-  publish-npm-rc:
-    name: Publish NPM Release Candidate
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [22.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -43,7 +23,24 @@ jobs:
           cache-dependency-path: package-lock.json
 
       - name: Install dependencies
-        run: npm i
+        run: npm ci
+
+      - name: e2e-test
+        uses: ./.github/workflows/common/e2e-test
+  publish-npm-rc:
+    name: Publish NPM Release Candidate
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Node and npm
+        uses: ./.github/workflows/common/setup-node-and-npm
+        with:
+          cache-dependency-path: package-lock.json
+
+      - name: Install dependencies
+        run: npm ci
 
       - name: build
         run: npm run build
@@ -54,10 +51,6 @@ jobs:
         working-directory: dist
         shell: bash
         run: npm version --new-version "v0.0.0-${FULL_SHA:0:6}" --no-git-tag-version
-
-        # Required for Granular Access Tokens
-      - name: NPM Access Config
-        run: npm config set //registry.npmjs.org/:_authToken ${{secrets.NPM_AUTH_TOKEN}}
 
       - name: Publish on NPM @next
         run: npm publish --verbose --tag next --access public
