--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -1,6 +1,9 @@
 # yaml-language-server: $schema=https://json.schemastore.org/github-workflow.json
 name: Merge to Main
 
+permissions:
+  contents: read
+
 on:
   push:
     branches: ['main']
@@ -23,28 +26,3 @@ jobs:
 
       - name: e2e-test
         uses: ./.github/workflows/common/e2e-test
-  publish-npm-rc:
-    name: Publish NPM Release Candidate
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Setup Node and npm
-        uses: ./.github/workflows/common/setup-node-and-npm
-        with:
-          cache-dependency-path: package-lock.json
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: build
-        run: npm run build
-
-      - name: Version package and publish on NPM @next
-        env:
-          FULL_SHA: ${{github.sha}}
-        uses: ./.github/workflows/common/publish-to-npm
-        with:
-          version: "v0.0.0-${FULL_SHA:0:6}"
-          package-tag: 'next'
