--- a/.github/workflows/publish-switch.yml
+++ b/.github/workflows/publish-switch.yml
@@ -15,8 +15,8 @@ permissions:
   id-token: write  # Required for OIDC
 
 jobs:
-  publish-npm-rc:
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+  publish-npm-dev:
+    if: github.ref == 'refs/heads/main'
     name: Publish NPM Release Candidate
     runs-on: ubuntu-latest
     permissions:
@@ -46,7 +46,7 @@ jobs:
           package-tag: 'next'
 
   publish-npm-release:
-    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
+    if: startsWith(github.ref, 'refs/tags/')
     name: Publish NPM Release
     runs-on: ubuntu-latest
     env:
